# infrahub-demo-reachability-check

./: .env  .gitignore  .infrahub.yml  DEMO.md  LICENSE.txt  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  tasks.py
checks/: path_assertion.py
data/: constraints.yml  group.yml  rules.yml
demo-seed/: register_repo.py  setup.py
demo-seed/data/: 01-asns.yml  02-devices.yml  03-bgp-sessions.yml  04-users.yml
demo-seed/schemas/: network.yml
docs/: IMPLEMENTATION.md
docs/superpowers/plans/: 2026-07-02-genuine-peering-upgrade.md
docs/superpowers/specs/: 2026-07-02-genuine-peering-reachability-design.md
menus/: reachability.yml
queries/: path_check.gql  rule_url.gql
schemas/: reachability.yml
scripts/: bootstrap.py
transforms/: path_traversal_url.py
